phase2-k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: production
  labels:
    app: ingress
    project: devops-final
  annotations:
    acme.cert-manager.io/http01-ingress-class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.nhibuaa.space
        - nhibuaa.space
      secretName: tls-production-cert
  rules:
    - host: app.nhibuaa.space
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: nhibuaa.space
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  labels:
    project: devops-final
  annotations:
    acme.cert-manager.io/http01-ingress-class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.nhibuaa.space
      secretName: tls-grafana-cert
  rules:
    - host: grafana.nhibuaa.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 80
